RESOLVED FIXED83355
[BlackBerry] Text selection - Can't select texts
https://bugs.webkit.org/show_bug.cgi?id=83355
Summary [BlackBerry] Text selection - Can't select texts
Sean Wang
Reported 2012-04-06 01:58:35 PDT
For blackberry porting, Touch and hold at any simple text, the selection handles and context menu should popup, but it doesn't.
Attachments
Patch (2.90 KB, patch)
2012-04-06 02:22 PDT, Sean Wang
no flags
Sean Wang
Comment 1 2012-04-06 02:22:59 PDT
George Staikos
Comment 2 2012-04-06 04:53:44 PDT
Comment on attachment 135993 [details] Patch This kind of defeats the performance enhancements though.
WebKit Review Bot
Comment 3 2012-04-06 05:53:53 PDT
Comment on attachment 135993 [details] Patch Clearing flags on attachment: 135993 Committed r113429: <http://trac.webkit.org/changeset/113429>
WebKit Review Bot
Comment 4 2012-04-06 05:53:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.