[BlackBerry] Text selection - Can't select texts https://bugs.webkit.org/show_bug.cgi?id=83355

Fix the problem of not sending out the result of the function
SelectionHandler::regionForTextQuads(). This regression issue
is introduced by the git commit f9446b7d671d48a833ab0acf12b1e20637e0a910.

Patch by Sean Wang <Xuewen.Wang@torchmobile.com.cn> on 2012-04-06
Reviewed by George Staikos.

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::SelectionHandler::regionForTextQuads):
    Add code to return the function result.

Canonical link: https://commits.webkit.org/100758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113429 268f45cc-cd09-0410-ab3c-d52691b4dbfc